joiner preview